<resources>
    <string name="app_name">Real Estate Manager</string>

    //TOOLBAR
    <string name="add">Ajouter</string>
    <string name="modify">Modify</string>
    <string name="search">Recherche</string>
    <string name="position">Localisation</string>
    <string name="loan">Prêt</string>

    //BOTTOM NAVIGATION
    <string name="property_list">Liste</string>
    <string name="map">Carte</string>

    //SEARCH ACTIVITY
    <string name="any">Aucun</string>
    <string name="type">Type de bien</string>
    <string name="price">Prix</string>
    <string name="picture">Photos</string>
    <string name="status">Statut</string>
    <string name="place">Localisation</string>
    <string name="commodity">Commodités</string>
    <string name="surface">Surface</string>
    <string name="room">Pièces</string>
    <string name="date">Date</string>
    <string name="euro_symbol">€</string>
    <string name="and">Et</string>
    <string name="between">Entre</string>
    <string name="from">Du</string>
    <string name="to">Au</string>
    <string name="square_meters">m2</string>
    <string name="description">Description</string>
    <string name="modified">"Modifié: "</string>
    <string name="created">"Mis en ligne: "</string>
    <string name="none">Aucun</string>

    <string name="title_activity_edit_update">Edition</string>
    <string name="price_min">Prix Min</string>
    <string name="price_max">Prix Max</string>
    <string name="surface_min">Surface Min</string>
    <string name="surface_max">Surface Max</string>
    <string name="room_min">Nbre Pièces Min</string>
    <string name="room_max">Nbre Pièces Max</string>
    <string name="bedroom_min">Nbre Chambres Min</string>
    <string name="bedroom_max">Nbre Chambres Max</string>
    <string name="bathroom_min">Nbre SdB Min</string>
    <string name="bathroom_max">Nbre SdB Max</string>
    <string name="picture_min">Nbre Photos Min</string>
    <string name="picture_max">Nbre Photos Max</string>
    <string name="entry_date_begin">Date Entrée début</string>
    <string name="entry_date_end">Date Entrée Fin</string>
    <string name="sold_date_begin">Date Vente début</string>
    <string name="sold_date_end">Date Vente Fin</string>
    <string name="put_description">Veuillez Saisir une description</string>
    <string name="nb_room">Nb de pièces</string>
    <string name="nb_bedroom">Nb de chambres</string>
    <string name="nb_bathroom">Nb de SdB</string>
    <string name="add_picture">Ajouter Photo</string>
    <string name="take_picture">Prendre Photo</string>
    <string name="ref">Ref:</string>
    <string name="street_nb">Numéro de rue</string>
    <string name="street_name">Nom de Rue</string>
    <string name="zipcode">Code Postal</string>
    <string name="city">Ville</string>
    <string name="country">Pays</string>
    <string name="no_result">"Aucune propriété n'a été trouvée suivant vos critères."</string>
    <string name="error_value">"Attention l'un des valeurs min est supérieur a la valeur max de recherche."</string>
    <string name="date_error">"Attention aux dates saisies."</string>

    //PROPERTY LIST
    <string name="no_property_found">Aucun Logement présent</string>

    //PERMISSION POPUP
    <string name="popup_title_permission_location_access">Cette application a besoin de vous localiser. Acceptez-vous
        ?
    </string>
    <string name="popup_title_permission_camera_access">Cette application a besoin d\'accéder à la caméra. Acceptez-vous
        ?
    </string>
    <string name="popup_title_permission_read_access">Cette application a besoin d\'accéder à votre stockage. Acceptez
        vous ?
    </string>
    <string name="popup_title_permission_write_access">Cette application a besoin d\'enregistrer des données sur votre
        stockage. Acceptez vous ?
    </string>
    <string name="location_access_denied">Geolocalisation refusée, veuillez l\'accepter.</string>
    <string name="camera_access_denied">Accès à l\'appareil photo refusé, veuillez l\'accepter.</string>
    <string name="read_access_denied">Accès au stockage refusé, veuillez l\'accepter.</string>
    <string name="write_access_denied">Accès en écriture stockage refusé, veuillez l\'accepter.</string>
    <string name="popup_message_answer_yes">Oui</string>
    <string name="popup_message_answer_no">Non</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="no_description">Veuillez renseigner une description</string>

    //EDIT-UPDATE ACTIVITY
    <string name="agent">Agent Immobilier</string>
    <string name="points_of_interest">Points d\'interêt</string>
    <string name="diag_del_picture_title">Suppression Image</string>
    <string name="diag_del_picture_message">Voulez vous vraiment supprimer cette image ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="activity_edit_not_enough_info">Des informations sont manquantes. Merci de vérifier de renseigner les
        informations manquantes et d\'insérer au moins une photo.
    </string>

    //NOTIFICATION
    <string name="notification_property_created">"La création de la propriété a bien été réalisée."</string>
    <string name="notification_property_updated">"L'annonce a bien été mise à jour."</string>

    //INTERNET
    <string name="no_internet">"Pas de connexion Internet. Veuillez vérifier votre connexion et relancer."</string>


    //LOAN SIMULATION ACTIVITY
    <string name="title_activity_loan_simulation">Simulateur Prêt</string>
    <string name="loan_simulation">Simulateur de Prêt:</string>
    <string name="loan_value">Montant du Pret</string>
    <string name="contribution">Apport</string>
    <string name="loan_rate">Taux (%)</string>
    <string name="period">Durée (année)</string>
    <string name="loan_calcul">Calcul du pret</string>
    <string name="monthly_payment">Votre Mensualité</string>

    //DETAIL ACTIVITY
    <string name="sold">VENDU</string>
    <string name="entry_date">Date d\'entrée</string>
    <string name="sold_date">Date de vente</string>

    //BLANK FRAGMENT
    <string name="blank_fragment">Veuillez Cliquer sur un bien de la liste</string>
    <string name="title_activity_result">ResultActivity</string>


</resources>
