<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_activity_main_position"
            android:icon="@drawable/ic_location"
            app:showAsAction="ifRoom"
            android:title="@string/position">
    </item>

    <item
            android:id="@+id/menu_activity_main_add"
            android:icon="@drawable/ic_add"
            app:showAsAction="ifRoom"
            android:title="@string/add">
    </item>

    <item
            android:id="@+id/menu_activity_main_modify"
            android:icon="@drawable/ic_modify"
            app:showAsAction="ifRoom"
            android:title="@string/modify">
    </item>

    <item
            android:id="@+id/menu_activity_main_search"
            android:icon="@drawable/ic_search_icon"
            app:showAsAction="ifRoom"
            android:title="@string/search">
    </item>

</menu>