<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/type"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_home"/>

        <Spinner
                android:id="@+id/activity_search_type_sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="65"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/price"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_money"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="65"
                android:orientation="horizontal">

            <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                <TableRow
                    android:layout_width="fill_parent">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/between"
                            android:textSize="@dimen/activity_search_title_txt"/>

                    <Spinner
                            android:id="@+id/activity_search_price_min_sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/euro_symbol"
                            android:textSize="@dimen/activity_search_title_txt"/>
                </TableRow>
                <TableRow>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/and"
                            android:textSize="@dimen/activity_search_title_txt"/>

                    <Spinner
                            android:id="@+id/activity_search_price_max_sp"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/euro_symbol"
                            android:textSize="@dimen/activity_search_title_txt"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/status"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_status"/>

        <Spinner
                android:id="@+id/activity_search_status_sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="65"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/picture"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_camera"/>

        <Spinner
                android:id="@+id/activity_search_picture_sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="65"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/date"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_date"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="65"
                android:textSize="16sp"
                android:orientation="horizontal">

            <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                <TableRow
                        android:layout_width="fill_parent">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/from"
                            android:textSize="@dimen/activity_search_title_txt"/>

                    <TextView
                            android:id="@+id/activity_search_date_min_edt"
                            style="@style/SearchActivityTextView"/>
                </TableRow>

                <TableRow>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/to"
                            android:textSize="@dimen/activity_search_title_txt"/>

                    <TextView
                            android:id="@+id/activity_search_date_max_edt"
                            style="@style/SearchActivityTextView"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/surface"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_surface"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="65"
                android:layout_height="match_parent">

            <Spinner
                    android:id="@+id/activity_search_surf_min_sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/and"
                    android:textSize="@dimen/activity_search_title_txt"/>

            <Spinner
                    android:id="@+id/activity_search_surf_max_sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/square_meters"
                    android:textSize="@dimen/activity_search_title_txt"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/room"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_room"/>

        <Spinner
                android:id="@+id/activity_search_room_sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="65"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/place"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_location"/>

        <TextView
                android:id="@+id/activity_search_place_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:gravity="center_vertical"
                android:layout_weight="65"
                android:textSize="14sp"
                android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
            style="@style/SearchActivityLayout">

        <TextView
                android:text="@string/commodity"
                style="@style/SearchActivityTextTitle"
                android:drawableStart="@drawable/ic_local_activity"/>

        <com.nicolas.duboscq.realestatemanager.utils.MultiSpinner
                android:id="@+id/multispinner"
                android:layout_width="0dp"
                android:layout_weight="65"
                android:layout_height="match_parent"
                android:entries="@array/place" />

    </LinearLayout>

    <Button
            android:id="@+id/activity_search_btn"
            android:text="@string/search_fr"
            android:textSize="@dimen/activity_search_title_txt"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_search_icon"
            android:background="@drawable/button_bg_rounded_corners"/>

</LinearLayout>